Disable BeginInvoke causing hang in SharpDevelop.
Call projectSyncAction directly without using BeginInvoke/EndInvoke which is causing SharpDevelop to hang.

--- a/T4MVCHostMvcApp/T4MVC Files/T4MVC.tt
+++ b/T4MVCHostMvcApp/T4MVC Files/T4MVC.tt
@@ -1746,7 +1746,7 @@ class Manager {
             if (templateProjectItem.ProjectItems == null)
                 return;
             base.Process(split);
-            projectSyncAction.EndInvoke(projectSyncAction.BeginInvoke(generatedFileNames, null, null));
+            projectSyncAction(generatedFileNames);
         }
 
         protected override void CreateFile(String fileName, String content) {
